--- a/index.html
+++ b/index.html
@@ -4,17 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./main.css/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <title>Document</title>
 </head>
 <body>
     <header>
         <img class="logo" src="./img/Image20240806201421.png" alt="logo">
-        
-        <button id="abrir" class="abrir-menu">abrir</button>
-
+        <button id="abrir" class="abrir-menu"><i class="bi bi-list"></i></i></button>
         <nav class="nav" id="nav">
-
-            <button id="cerrar">Cerrar</button>
+            <butto id="cerrar" class="cerrar-menu"><i class="bi bi-x"></i></butto>
             <ul class="nav-list">
                 <li><a href="#">Inicio</a></li>
                 <li><a href="#">Quienes Somos</a></li>
